Deleted iris files to run Docker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "go.toolsEnvVars": {},
     "go.inferGopath": true,
-    "gopls": {
-        "build.expandWorkspaceToModule": true
-    }
+    "go.goroot": "/root/.gvm/gos/go1.21.3",
 }
