--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,6 @@ services:
       - ./build/.go_env
     environment:
       - TZ=Asia/Tokyo
+    ports:
+      - 8000:8080 # ホスト側のポート:コンテナ側のポート
+    command: go run .
