--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -52,8 +52,9 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker compose -f docker-compose.build.yml build --no-cache -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:${{ github.sha }}
-        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:${{ github.sha }}
+        docker compose -f docker-compose.build.yml build --no-cache
+        docker tag docker tag iris-app:latest ${{ secrets.REGISTRY_LOGIN_SERVER }}/iris-app:${{ github.sha }}
+        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/iris-app:${{ github.sha }}
 
     - name: 'Deploy to Azure Container Instances'
       uses: 'azure/aci-deploy@v1'
