--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -53,7 +53,7 @@ jobs:
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
         docker compose -f docker-compose.build.yml build --no-cache
-        docker tag docker.io/library/iris-app:latest ${{ secrets.REGISTRY_LOGIN_SERVER }}/iris-app:${{ github.sha }}
+        docker tag iris-app:latest ${{ secrets.REGISTRY_LOGIN_SERVER }}/iris-app:${{ github.sha }}
         docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/iris-app:${{ github.sha }}
 
     - name: 'Deploy to Azure Container Instances'
@@ -61,7 +61,7 @@ jobs:
       with:
         resource-group: ${{ secrets.RESOURCE_GROUP }}
         dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
-        image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:${{ github.sha }}
+        image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/iris-app:${{ github.sha }}
         registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         registry-username: ${{ secrets.REGISTRY_USERNAME }}
         registry-password: ${{ secrets.REGISTRY_PASSWORD }}
