--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -52,8 +52,8 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker compose -f docker-compose.build.yml build --no-cache
-        docker tag iris-app:latest ${{ secrets.REGISTRY_LOGIN_SERVER }}/iris-app:${{ github.sha }}
+        docker compose -f docker-compose.build.yml build
+        docker tag  iris-image:latest ${{ secrets.REGISTRY_LOGIN_SERVER }}/iris-app:${{ github.sha }}
         docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/iris-app:${{ github.sha }}
 
     - name: 'Deploy to Azure Container Instances'
