changed port number

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -67,3 +67,4 @@ jobs:
         registry-password: ${{ secrets.REGISTRY_PASSWORD }}
         name: iris-app
         location: 'japan east'
+        ports: 8080
