--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -40,20 +40,20 @@ jobs:
     #     tenant-id: ${{ secrets.AZURE_TENANT_ID }}
     #     subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Test
-      uses: actions/setup-go@v4
-      working-directory: iris-app
-      with:
-        go-version: '1.21.3'
-    - name: Install dependencies
-      run: go get .
-      working-directory: iris-app
-    - name: Build
-      run: go build -v ./...
-      working-directory: iris-app
-    - name: Test with the Go CLI
-      run: go test main_test.go
-      working-directory: iris-app
+    # - name: Test
+    #   uses: actions/setup-go@v4
+    #   working-directory: iris-app
+    #   with:
+    #     go-version: '1.21.3'
+    # - name: Install dependencies
+    #   run: go get .
+    #   working-directory: iris-app
+    # - name: Build
+    #   run: go build -v ./...
+    #   working-directory: iris-app
+    # - name: Test with the Go CLI
+    #   run: go test main_test.go
+    #   working-directory: iris-app
 
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
